[project]
name = "lonpy"
version = "0.1.0"
description = "Local Optima Networks (LONs) for continuous optimization - Python implementation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "igraph>=0.11.0",
    "matplotlib>=3.7.0",
    "plotly>=5.15.0",
    "kaleido>=0.2.1",
    "imageio>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "ioh>=0.3.22",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
    "mkdocstrings>=1.0.0",
    "mkdocstrings-python>=1.0.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.8.0",
    "ty>=0.0.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lonpy"]

[tool.ruff]
line-length = 135
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C",   # flake8-comprehensions
    "UP",  # pyupgrade (modern Python syntax)
    "SIM", # flake8-simplify
    "RUF", # Ruff-specific rules
    "N",   # pep8-naming
    "YTT", # flake8-2020
    "A",   # flake8-builtins
]
ignore = ["C408"]
mccabe = {max-complexity = 15}

[tool.ruff.lint.isort]
known-first-party = ["project-name"] # replace with your project name
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = true

[tool.ty.rules]
unresolved-import = "ignore"
possibly-missing-attribute = "ignore"
