[project]
name = "lonpy"
version = "0.1.0"
description = "Local Optima Networks (LONs) for continuous optimization - Python implementation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "igraph>=0.11.0",
    "matplotlib>=3.7.0",
    "plotly>=5.15.0",
    "kaleido>=0.2.1",
    "imageio>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "ioh>=0.3.22",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
    "mkdocstrings>=1.0.0",
    "mkdocstrings-python>=1.0.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lonpy"]

[tool.hatch.build]
artifacts = ["src/lonpy/py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PTH", # flake8-use-pathlib
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without strict parameter
    "SIM108", # use ternary operator instead of if-else
    "C408",   # unnecessary dict() call - often more readable in plotly
]

[tool.ruff.lint.isort]
known-first-party = ["lonpy"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
